[gd_scene load_steps=4 format=3 uid="uid://dpgovkc52pw8u"]

[ext_resource type="Theme" uid="uid://duvuslhlttwwd" path="res://colorchange.tres" id="1_8xodk"]
[ext_resource type="Script" path="res://not_enough.gd" id="2_yca20"]
[ext_resource type="Script" path="res://Label.gd" id="3_uctoi"]

[node name="Main" type="Node2D"]

[node name="Background Color (Solid)" type="Polygon2D" parent="."]
z_index = -2
color = Color(0.713726, 0.34902, 0.45098, 1)
polygon = PackedVector2Array(-598, -330, 0, -334, 610, -334, 607, 336, -596, 334)

[node name="MainButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -55.0
offset_right = 140.0
offset_bottom = 55.0
theme = ExtResource("1_8xodk")
text = "Touch Me!"

[node name="Score" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -103.5
offset_top = 88.5
offset_right = 103.5
offset_bottom = 145.5
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("3_uctoi")

[node name="ScoreTitle" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -36.5
offset_top = 56.0
offset_right = 36.5
offset_bottom = 96.0
theme_override_font_sizes/font_size = 27
text = "Score"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Buy +1" type="Button" parent="."]
offset_left = 271.0
offset_top = -298.0
offset_right = 510.0
offset_bottom = -240.0
theme = ExtResource("1_8xodk")
text = "Buy +1 (10 Score)"

[node name="not_enough_timer" type="Timer" parent="."]

[node name="not_enough" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -133.0
offset_top = 170.0
offset_right = 129.0
offset_bottom = 193.0
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("2_yca20")

[node name="Buy *2" type="Button" parent="."]
offset_left = 271.0
offset_top = -236.0
offset_right = 510.0
offset_bottom = -178.0
theme = ExtResource("1_8xodk")
text = "Buy +10 (50 Score)"

[node name="Buy +10" type="Button" parent="."]
offset_left = 271.0
offset_top = -174.0
offset_right = 510.0
offset_bottom = -116.0
theme = ExtResource("1_8xodk")
text = "Buy x2 (1000 Score)"

[node name="Prestige Button" type="Button" parent="."]
offset_left = 271.0
offset_top = -112.0
offset_right = 510.0
offset_bottom = -54.0
theme = ExtResource("1_8xodk")
text = "Prestige!"

[node name="prestige_text" type="Label" parent="."]
offset_left = -507.0
offset_top = -296.0
offset_right = -305.0
offset_bottom = -216.0
text = "Prestige Score = 0"

[node name="reset_button" type="Button" parent="."]
offset_left = 271.0
offset_top = 246.0
offset_right = 510.0
offset_bottom = 304.0
theme = ExtResource("1_8xodk")
text = "Reset EVERYTHING"

[connection signal="pressed" from="MainButton" to="Score" method="_on_button_pressed"]
[connection signal="pressed" from="Buy +1" to="Score" method="_on_button_2_pressed"]
[connection signal="timeout" from="not_enough_timer" to="not_enough" method="_on_not_enough_timer_timeout"]
[connection signal="pressed" from="Buy *2" to="Score" method="_on_buy_2_pressed"]
[connection signal="pressed" from="Buy +10" to="Score" method="_on_buy_3_pressed"]
[connection signal="pressed" from="Prestige Button" to="Score" method="_on_prestige_button_pressed"]
[connection signal="pressed" from="reset_button" to="Score" method="_on_reset_button_pressed"]
